[project]
name = "verilens-factcheck-mcp"
version = "1.0.0"
description = "VeriLens FactCheck MCP Server — sandboxed, whitelist-restricted fact-checking toolset"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
verilens-factcheck-mcp = "server:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
